worked on main page

--- a/test/home.html
+++ b/test/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="../css/styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <meta name="description" content="Free Web tutorials">
@@ -27,6 +27,8 @@
 	<li><a href="">Music</a></li>
 	<li><a href="">Yes</a></li>
 </ul>
+
+
 <h1 class="mega">Entry #1</h1>
 <p class="mega">Every day is a new day.</p>
 <hr>
@@ -36,6 +38,8 @@
 <h1 class="mega">Entry #3</h1>
 <p class="mega">I changed my mind.</p>
 <hr>
+
+
 <div class="foot">
 <p>This be a footer</p>
 </div>
