--- a/test/main.html
+++ b/test/main.html
@@ -1,4 +1,4 @@
-<?php include_once(“home.html”); ?>
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="../css/styles.css">
@@ -20,7 +20,7 @@
 
 <nav>
     <ul class="navi">
-        <li><a href="test/home.html">Home 2</a></li><hr>
+        <li><a href="home.html">Home 2</a></li><hr>
         <li><a href="https://www.youtube.com/">Youtube</a></li><hr>
         <li><a href="gurps.html">GURPS</a></li><hr>
         <li><a href="vn.html">Web VN</a></li><hr>
@@ -33,4 +33,6 @@
 
 
 </body>
+
+
 </html>
