--- a/test/main.html
+++ b/test/main.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Visual Novel">
     <meta name="author" content="deathshadowworld">
     <title>Firehub Link</title>
-    <link rel="icon" href="..media/img/bonfire.gif">
+    <link rel="icon" href="../media/img/bonfire.gif">
 </head>
 
 
