--- a/music/moshi.html
+++ b/music/moshi.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Visual Novel">
     <meta name="author" content="deathshadowworld">
     <title>Firehub Link</title>
-    <link rel="icon" href="bg/bonfire.gif">
+    <link rel="icon" href="../css/bg/bonfire.gif">
     
 </head>
 
@@ -16,31 +16,31 @@
 <body>
 <header>
     <h1 class="mega">Hi</h1>
-    <p style="text-align: center; margin-top: 30px; color: white;">This is my music collection.</p>
+    <p style="text-align: center; margin-top: 30px; color: white;">This is a music collection.</p>
 </header>
 
 <nav>
     <ul >
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 01 Intro.mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 01 Intro.mp3" type="audio/mpeg">
             </audio><br>Intro</li>
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 02 Pretty Please.mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 02 Pretty Please.mp3" type="audio/mpeg">
             </audio><br>Pretty Please</li>
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 03 Superstar (w- Hentai Dude).mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 03 Superstar (w- Hentai Dude).mp3" type="audio/mpeg">
             </audio><br>Superstar (w- Hentai Dude)</li>
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 04 Dance Dance (w- Android52).mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 04 Dance Dance (w- Android52).mp3" type="audio/mpeg">
             </audio><br>Dance Dance (w- Android52)</li>
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 05 Crosstalk.mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 05 Crosstalk.mp3" type="audio/mpeg">
             </audio><br>Crosstalk</li>
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 06 Love Me.mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 06 Love Me.mp3" type="audio/mpeg">
             </audio><br>Love Me</li>
         <li><audio controls>
-            <source src="../media/sound/Moshi/Moe Shop - Moshi Moshi - 07 Outro.mp3" type="audio/mpeg">
+            <source src="sound/Moshi/Moe Shop - Moshi Moshi - 07 Outro.mp3" type="audio/mpeg">
             </audio><br>Outro</li>
     </ul>
 </nav>
