--- a/music/music.html
+++ b/music/music.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Visual Novel">
     <meta name="author" content="deathshadowworld">
     <title>Firehub Link</title>
-    <link rel="icon" href="bg/bonfire.gif">
+    <link rel="icon" href="../css/bg/bonfire.gif">
 </head>
 
 
@@ -21,14 +21,14 @@
 <nav>
     <ul>
         <li><audio controls>
-            <source src="../media/sound/dragonlofi.mp3" type="audio/mpeg">
+            <source src="sound/dragonlofi.mp3" type="audio/mpeg">
             </audio><br>dragonlofi.mp3</li>
         <li><audio controls>
-            <source src="../media/sound/fairylofiextended.mp3" type="audio/mpeg">
+            <source src="sound/fairylofiextended.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio><br>fairylofiextended.mp3</li>
         <li><audio controls>
-            <source src="../media/sound/idk.mp3" type="audio/mpeg">
+            <source src="sound/idk.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio><br>idk.mp3</li>
         <li class="lilink"><a href="moshi.html">Moe Shop - Moshi Moshi</a></li>
