--- a/videos/videos.html
+++ b/videos/videos.html
@@ -19,11 +19,11 @@
 </header>
 
 <div class="mega">
-    <video controls><source src="379256241.mp4" type="video/mp4">Unavailable due to upload limit</video>
+    <video controls><source src="file:///E:/Downloads/379256241.mp4" type="video/mp4">Unavailable due to upload limit</video>
     <p>ME1ME!ME!</p>
-    <video controls><source src="ep7.mp4" type="video/mp4">Unavailable to save space</video>
+    <video controls><source src="file:///E:/Downloads/ep7.mp4" type="video/mp4">Unavailable to save space</video>
     <p>Clip EP 7</p>
-    <video controls><source src="ep8.mp4" type="video/mp4">Unavailable to save space</video>
+    <video controls><source src="file:///E:/Downloads/ep8.mp4" type="video/mp4">Unavailable to save space</video>
     <p>Clip EP 8</p>
 </div>
 </body>
