added various things

--- a/manga/manga.html
+++ b/manga/manga.html
@@ -8,7 +8,14 @@
     <meta name="keywords" content="Visual Novel">
     <meta name="author" content="deathshadowworld">
     <title>Firehub Link</title>
-    <link rel="icon" href="../media/img/bonfire.gif">
+    <link rel="icon" href="../css/bg/bonfire.gif">
+    <style>
+        img{
+            max-height:800px;
+            margin-bottom: 25px;
+            margin-top: 5px;
+        }
+    </style>
 </head>
 
 
@@ -18,21 +25,16 @@
     <p style="text-align: center; margin: 30px; color: white;">This is my manga collection.</p>
 </header>
 
-<div class="mega">
-    <img src="1.png" alt="aqua being patted">
-    <p>1.png</p>
-    <img src="2.png" alt="tohru">
-    <p>2.png</p>
-    <img src="3.jpg" alt="skadi">
-    <p>3.jpg</p>
-    <img src="4.jpg" alt="fuka pat">
-    <p>4.jpg</p>
-    <img src="5.png" alt="einstein simp">
-    <p>5.png</p>
-    <img src="6.png" alt="einstein">
-    <p>6.png</p>
-    <img src="7.jpg" alt="fuka cool">
-    <p>7.jpg</p>
+<div class="mega" stlye="height:auto;">
+    <img src="14.jpg" alt="manga page"><br>
+    <button type="button">Previous</button>
+    <select id="page" name="page">
+        <option value="14.jpg" >Page 14</option>
+        <option value="15.jpg">Page 15</option>
+        <option value="17.jpg">Page 17</option>
+    </select>
+    <button type="button">Next</button>
+
 </div>
 
 
