--- a/hentai/hentai.html
+++ b/hentai/hentai.html
@@ -8,7 +8,13 @@
     <meta name="keywords" content="Visual Novel">
     <meta name="author" content="deathshadowworld">
     <title>Firehub Link</title>
-    <link rel="icon" href="../media/img/bonfire.gif">
+    <link rel="icon" href="../css/bg/bonfire.gif">
+    <style>
+        img {
+            max-width: 100%;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 
 
