changed htmls in js

--- a/manga/manga.html
+++ b/manga/manga.html
@@ -1,29 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="description" content="Free Low-Quality content">
-    <meta name="keywords" content="Visual Novel">
-    <meta name="author" content="deathshadowworld">
-    <title>Firehub Link</title>
-    <link rel="icon" href="../css/bg/bonfire.gif">
-    <style>
-        img{
-            max-height:850px;
-            max-width: 100%;
-            margin-bottom: 25px;
-            margin-top: 5px;
-        }
-    </style>
 </head>
-
 <body>
-<header>
-    <h1 id="manga_name" class="mega">Hi</h1>
-</header>
-
+    <script src="../css/style.js"></script>
 <div class="mega" style="height:auto;">
     <img id="image" src="" alt="manga page"><br>
     <button type="button" id="prev" onclick="prevButton()">Previous</button>
