--- a/manga/select.html
+++ b/manga/select.html
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="description" content="Free Low-Quality content">
-    <meta name="keywords" content="Visual Novel">
-    <meta name="author" content="deathshadowworld">
-    <title>Firehub Link</title>
-    <link rel="icon" href="../css/bg/bonfire.gif">
 </head>
-
 <body>
-<header>
-    <h1 class="mega">Hi</h1>
-    <p class="desc">These are mangas.</p>
-</header>
-    <form id="title_select" action="chapter.html" method="GET"></form>
+    <script src="../css/style.js"></script>
+    <script src="data.js"></script>
+    <script src="select.js"></script>
 </body>
-<script src="select.js"></script>
-<script src="index.js"></script>
-
 </html>
