--- a/test/main.html
+++ b/test/main.html
@@ -1,42 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="description" content="Free Low-Quality content">
-    <meta name="keywords" content="Visual Novel">
-    <meta name="author" content="deathshadowworld">
-    <title>Firehub Link</title>
-    <link rel="icon" href="../css/bg/bonfire.gif">
 </head>
-
-
 <body>
-<header>
-    <h1 class="mega">Hi</h1>
-    <p style="text-align: center; margin-top: 30px; color: white;">Welcome to the Hub of many things that I may or may not be interested with.</p>
-</header>
-
-<nav>
-    <ul class="navi">
-        <li class="lilink"><a href="home.html">Home 2</a></li>
-        <li class="lilink"><a href="https://www.youtube.com/">Youtube</a></li>
-        <li class="lilink"><a href="../tabletops/index.html">Tabletops</a></li>
-        <li class="lilink"><a href="../vn/vn.html">Web VN</a></li>
-        <li class="lilink"><a href="../japanese/japanese.html">日本語</a></li>
-        <li class="lilink"><a href="../manga/select.html">Manga</a></li>
-        <li class="lilink"><a href="../hentai/hentai.html">Lewd</a></li>
-        <li class="lilink"><a href="../pictures/pictures.html">Pictures</a></li>
-        <li class="lilink"><a href="../music/music.html">Music</a></li>
-        <li class="lilink"><a href="../videos/videos.html">Videos</a></li>
-        <li class="lilink"><a href="../games/games.html">Games</a></li>
-    </ul>
-</nav>
-
-
-
+<script src="../css/style.js"></script>
+<script src="index.js"></script>
+<script src="main.js"></script>
 </body>
-
-
 </html>
