go to top of image in manga.html

--- a/manga/manga.html
+++ b/manga/manga.html
@@ -8,7 +8,7 @@
     <img id="image" src="" alt="manga page"><br>
     <button type="button" id="prev" onclick="prevButton()">Previous</button>
     <select id="page" name="page" onchange="pageSelect()"></select>
-    <button type="button" id="next" onclick="nextButton()">Next</button>
+    <button type="button" id="next" onclick="nextButton()" href>Next</button>
 </div>
 
 <script src="manga.js"></script>
